# Synera

./: .gitignore  CMakeLists.txt  README.md  Synera_zh_CN.ts  mainwindow.ui
include/: mainwindow.h  profilepage.h  startpage.h
include/core/: battlesimulator.h  board.h  enemyencounterinfo.h  gamemanager.h  pageid.h  pagemanager.h  playeravatar.h  playerprofile.h  playertemplatelibrary.h  roundstate.h  uiscale.h  unit.h  unittemplate.h
include/pages/: battlecountdownpage.h  defeatpage.h  drawpage.h  initinfopage.h  maingamepage.h  mainwindow.h  profilepage.h  roundresultpage.h  rulepage.h  shoppage.h  startpage.h  victorypage.h
include/widgets/: battleinfopanel.h  benchwidget.h  boardwidget.h
src/: main.cpp  mainwindow.cpp  profilepage.cpp  startpage.cpp
src/core/: battlesimulator.cpp  board.cpp  enemyencounterinfo.cpp  gamemanager.cpp  pagemanager.cpp  playertemplatelibrary.cpp  unit.cpp  unittemplate.cpp
src/pages/: battlecountdownpage.cpp  defeatpage.cpp  drawpage.cpp  initinfopage.cpp  maingamepage.cpp  mainwindow.cpp  profilepage.cpp  roundresultpage.cpp  rulepage.cpp  shoppage.cpp  startpage.cpp  victorypage.cpp
src/widgets/: battleinfopanel.cpp  benchwidget.cpp  boardwidget.cpp
